--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <!-- <script src="main.js"></script> -->
-    <!-- <script async src="main.js"></script>-->
-    <script defer src="main.js"></script>
+    <!-- <script src="variable.js"></script> -->
+    <!-- <script async src="variable.js"></script>-->
+    <script defer src="variable.js"></script>
 </head>
 <body>
-    <!-- <script src="main.js"></script> -->
+    <!-- <script src="variable.js"></script> -->
 </body>
 </html>
