--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Title</title>
     <!-- <script src="variable.js"></script> -->
     <!-- <script async src="variable.js"></script>-->
-    <script defer src="variable.js"></script>
+<!--    <script defer src="variable.js"></script>-->
+    <script defer src="operator.js"></script>
 </head>
 <body>
     <!-- <script src="variable.js"></script> -->
