--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- <script async src="variable.js"></script>-->
 <!--    <script defer src="variable.js"></script>-->
 <!--    <script defer src="operator.js"></script>-->
-    <script defer src="function.js"></script>
+<!--    <script defer src="function.js"></script>-->
+    <script defer src="class.js"></script>
 </head>
 <body>
     <!-- <script src="variable.js"></script> -->
