--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <!--    <script defer src="function.js"></script>-->
 <!--    <script defer src="class.js"></script>-->
 <!--    <script defer src="object.js"></script>-->
-    <script defer src="array.js"></script>
+<!--    <script defer src="array.js"></script>-->
+    <script defer src="array-quiz.js"></script>
 </head>
 <body>
     <!-- <script src="variable.js"></script> -->
