Promise 정리 및 Callback to Promise

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <!--    <script defer src="array.js"></script>-->
 <!--    <script defer src="array-quiz.js"></script>-->
 <!--    <script defer src="json.js"></script>-->
-    <script defer src="async/callback.js"></script>
+<!--    <script defer src="async/callback.js"></script>-->
+<!--    <script defer src="async/promise.js"></script>-->
+    <script defer src="async/callback-to-promise.js"></script>
 </head>
 <body>
     <!-- <script src="variable.js"></script> -->
